--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show me the Data</title>
+    <title>Data</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,7 +47,13 @@
     <script>
 
         async function fetchData(site) {
-            // You can make it work!
+            try {
+                const response = await fetch(url);
+                const data = await response.json();
+                return data;
+            } catch (error) {
+                console.error("Error fetching data: ", error);
+            }
         }
            
     </script>
