--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             try {
                 const response = await fetch('https://dog-facts-api.herokuapp.com/api/v1/resources/dogs/all');
                 const data = await response.json();
-                return data;
+                console.log(data);
             } catch (error) {
                 console.error("Error fetching data: ", error);
             }
