--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         async function fetchData(site) {
             try {
-                const response = await fetch('https://dog-facts-api.herokuapp.com/api/v1/resources/dogs/all');
+                const response = await fetch('https://rhymebrain.com/talk?function=getRhymes&word=web');
                 const data = await response.json();
                 console.log(data);
             } catch (error) {
