--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             try {
                 const response = await fetch('https://rhymebrain.com/talk?function=getRhymes&word=web');
                 const data = await response.json();
-                console.log(data);
+                console.log(data[0]);
             } catch (error) {
                 console.error("Error fetching data: ", error);
             }
