--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,17 @@
         body {
             font-family: Arial, sans-serif;
         }
+
         .container {
             margin: 20px;
         }
+
         button {
             margin: 10px 0;
             padding: 10px 20px;
             cursor: pointer;
         }
+
         .output {
             margin-top: 10px;
             border: 1px solid #ccc;
@@ -24,21 +28,22 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
-        <h1>Show me the Data</h1>
+        <h1>Duck Pictures</h1>
         <div>
-            <h3><Replace Title 1></h3>
+            <h3>Duck Picture 1</h3>
             <button onclick="fetchData(1)">Display Data</button>
             <div id="output1" class="output">No data fetched yet.</div>
         </div>
         <div>
-            <h3><Replace Title 2></h3>
+            <h3>Duck Picture 2</h3>
             <button onclick="fetchData(2)">Display Data</button>
             <div id="output2" class="output">No data fetched yet.</div>
         </div>
         <div>
-            <h3><Replace Title 2></h3>
+            <h3>Duck Picture 3</h3>
             <button onclick="fetchData(3)">Display Data</button>
             <div id="output3" class="output">No data fetched yet.</div>
         </div>
@@ -48,14 +53,15 @@
 
         async function fetchData(site) {
             try {
-                const response = await fetch('https://rhymebrain.com/talk?function=getRhymes&word=web');
+                const response = await fetch('https://random-d.uk/api/images/51.jpg');
                 const data = await response.json();
-                console.log(data[0]);
+                console.log(data);
             } catch (error) {
                 console.error("Error fetching data: ", error);
             }
         }
-           
+
     </script>
 </body>
+
 </html>
