--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data</title>
+    <title>Dog Facts</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,19 +31,19 @@
 
 <body>
     <div class="container">
-        <h1>Duck Pictures</h1>
+        <h1>Dog Facts</h1>
         <div>
-            <h3>Duck Picture 1</h3>
+            <h3>Dog Fact 1</h3>
             <button onclick="fetchData(1)">Display Data</button>
             <div id="output1" class="output">No data fetched yet.</div>
         </div>
         <div>
-            <h3>Duck Picture 2</h3>
+            <h3>Dog Fact 2</h3>
             <button onclick="fetchData(2)">Display Data</button>
             <div id="output2" class="output">No data fetched yet.</div>
         </div>
         <div>
-            <h3>Duck Picture 3</h3>
+            <h3>Dog Fact 3</h3>
             <button onclick="fetchData(3)">Display Data</button>
             <div id="output3" class="output">No data fetched yet.</div>
         </div>
@@ -53,9 +53,11 @@
 
         async function fetchData(site) {
             try {
-                const response = await fetch('https://random-d.uk/api/images/51.jpg');
+                const response = await fetch('https://dog-api.kinduff.com/api/facts');
                 const data = await response.json();
-                console.log(data);
+                const outputDiv = document.getElementById(`output${site}`);
+                outputDiv.innerHTML = `<p>${data.facts[0]}</p>`;
+                console.log(data.facts[0]);
             } catch (error) {
                 console.error("Error fetching data: ", error);
             }
